fix: overflow on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -196,7 +196,8 @@ header {
     padding: 1rem;
     margin-bottom: 1rem;
     height: 390px;
-    overflow-y: scroll;
+    overflow-y: scroll !important;
+    -webkit-overflow-scrolling: touch;
     -ms-overflow-style: none;
     scrollbar-width: none; 
 }
